Fix GOVUK landing page header styles on small screen sizes

--- a/app/assets/stylesheets/govuk_chat.css
+++ b/app/assets/stylesheets/govuk_chat.css
@@ -191,7 +191,7 @@ header.govuk-header--yellow .govuk-phase-banner {
 }
 
 @media (max-width: 768px) {
-  header.govuk-header {
+  .govuk-chat header.govuk-header {
     padding-bottom: 10px;
   }
 
